[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Start/Start.gd" type="Script" id=1]
[ext_resource path="res://UI/Start/red_sliderDown.png" type="Texture" id=2]
[ext_resource path="res://Common/SpaceBackGround.jpeg" type="Texture" id=3]
[ext_resource path="res://UI/Start/blue_sliderDown.png" type="Texture" id=4]
[ext_resource path="res://UI/Start/logo.png" type="Texture" id=5]
[ext_resource path="res://Common/OdibeeSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Float"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Logo/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 521.242, 166.508 ), Vector2( 521.242, 200 ), Vector2( 521.242, 166.508 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 6 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513.458, 300.985 )
scale = Vector2( 0.227848, 0.13299 )
texture = ExtResource( 3 )

[node name="Logo" type="AnimationPlayer" parent="."]
autoplay = "Float"
anims/Float = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Logo"]
position = Vector2( 521.242, 187.72 )
texture = ExtResource( 5 )

[node name="StartButton" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -21.0
margin_right = 69.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Click to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -267.814
margin_top = -97.4092
margin_right = -27.8137
margin_bottom = -4.40924
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="."]
margin_left = 694.783
margin_top = 533.94
margin_right = 799.783
margin_bottom = 560.94
custom_fonts/font = SubResource( 3 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" type="HSlider" parent="."]
margin_left = 756.0
margin_top = 457.0
margin_right = 995.0
margin_bottom = 509.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffectsLabel" type="Label" parent="."]
margin_left = 624.083
margin_top = 468.859
margin_right = 738.083
margin_bottom = 495.859
custom_fonts/font = SubResource( 4 )
text = "Sound Effects"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="SoundEffects" to="." method="_on_SoundEffects_value_changed"]
